test(waiting): 역할별 상태 변경 통합 테스트 주석 추가 (#66)